Search: Fixed layout issues with minified HTML.
In medium/large views, the search field/button's layout used to rely on space/line break/tab characters being present in-between their elements in HTML markup. Their presence produced a space in-between the search field/button. But in pages that use minified HTML, the space disappeared, which made the field and button "stick" together.

It turns out that the search feature's small view and under SCSS file contained selectors that produced a predictable amount of space in noscript/wbdisable mode.

This commit moves the aforementioned selectors into a screen SCSS file, thereby resolving medium/large view's layout issues.

--- a/theme/search/_screen-sm-max.scss
+++ b/theme/search/_screen-sm-max.scss
@@ -6,16 +6,3 @@
 		display: inline-block;
 	}
 }
-
-#wb-srch-sub {
-	float: right;
-	margin-left: 5px;
-}
-
-[dir=rtl] {
-	#wb-srch-sub {
-		float: left;
-		margin-left: 0;
-		margin-right: 5px;
-	}
-}
